# Computational-Finance-Quantitative-Modeling

./: .gitignore  README.md  pyproject.toml
data/: __init__.py  market_data.py
data/cache/: prices_SPY_EFA_AGG_VNQ_GSG_SHV_2010-01-01_2024-12-31.csv
evaluation/: __init__.py  backtesting.py  risk_metrics.py
notebooks/: experiments.ipynb
src/option_pricing/: __init__.py  black_scholes.py  greeks.ipynb  monte_carlo_pricing.py
src/option_pricing/Explanations/: black_scholes_explanation.md  greeks_explanation.md  monte_carlo_pricing_Explanation.md
src/portfolio_optimization/: __init__.py  efficient_frontier.ipynb  mean_variance.py  risk_parity.py
src/portfolio_optimization/Explanations/: Mean_Variance_Explanation.md  Risk_Parity_Explanation.md  portfolio_optimization_overview.md
src/quant_finance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/stochastic_processes/: __init__.py  brownian_motion.py  geometric_bm.py  monte_carlo_expectation.py  simulations.ipynb
src/stochastic_processes/Explanations/: monte_carlo_expectation.md
src/volatility_models/: __init__.py  diagnostics.ipynb  garch.py  stochastic_volatility.py
src/volatility_models/Explanations/: Garch_Explanation.md  Stochastic_Volatility_Explanation.md  Volatility_Models_OverView.md
stochastic_processes/: brownian_motion.py  geometric_bm.py  simulations.ipynb
stochastic_processes/Explanations/: Brownian_Motion_Explanation.md  Geometric_Brownian_Motion_Explanation.md  monte_carlo_expectation.md
