[project]
name = "quant_finance"
version = "0.1.0"
description = "Computational Finance Quantitative Modeling Library"
authors = [{ name="Philip Stavrev" }]
dependencies = ["numpy", "matplotlib"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
